Prepare public GitHub release